--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Consulta tu Horóscopo</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="https://emojiapi.dev/api/v1/1f52e/64.png" />
+</head>
 <body>
-  <h1>Consulta tu Horóscopo</h1>
-  <form id="form">
-    <input type="text" id="birthdate" placeholder="DD-MM-AAAA" />
-    <button id="consult-button" disabled>Consultar</button>
-  </form>
 
-  <div id="horoscope-message" class="hidden"></div>
+  <form id="form">
+    <h1>🔮 Consulta tu Horóscopo</h1>
+    <input
+      type="text"
+      id="birthdate"
+      placeholder="DD-MM-AAAA"
+      autocomplete="off"
+    />
+    <button id="consult-button" disabled>Consultar</button>
+
+    <div id="horoscope-message" class="hidden"></div>
+  </form>
 
   <script type="module" src="./main.js"></script>
 </body>
+</html>
