--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <form id="form">
     <h1>🔮 Consulta tu Horóscopo</h1>
     <input
-      type="text"
+      type="date"
       id="birthdate"
       placeholder="DD-MM-AAAA"
       autocomplete="off"
