--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       placeholder="DD-MM-AAAA"
       autocomplete="off"
     />
-    <button id="consult-button" disabled>Consultar</button>
+    <button id="consult-button" enabled>Consultar</button>
 
     <div id="horoscope-message" class="hidden"></div>
   </form>
