--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <form id="form">
     <h1>🔮 Consulta tu Horóscopo</h1>
     <input
-      type="date"
+      type="text"
       id="birthdate"
       placeholder="DD-MM-AAAA"
       autocomplete="off"
+
     />
-    <button id="consult-button" enabled>Consultar</button>
+    <button id="consult-button" disabled>Consultar</button>
 
     <div id="horoscope-message" class="hidden"></div>
   </form>
